--- a/app/index.html
+++ b/app/index.html
@@ -13,10 +13,7 @@
 <body>
     <div class="container mt-5 mb-5">
         <h1 class="text-center">Welcome to our page.</h1>
-        <a class="btn btn-outline-primary btn-lg mt-5 mb-5" href="#">About Us</a>
-        <a class="btn btn-outline-primary btn-lg mt-5 mb-5" href="#">About You</a>
-        <a class="btn btn-outline-primary btn-lg mt-5 mb-5" href="#">About Us</a>
-        <a class="btn btn-outline-primary btn-lg mt-5 mb-5" href="#">About You</a>
+        <a class="btn btn-outline-primary btn-lg mt-5 mb-5" href="aboutus.html">About Us</a>
 
         <div class="accordion mt-5" id="accordionExample">
             <div class="accordion-item">
@@ -27,7 +24,7 @@
               </h2>
               <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  <strong>This is it!</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
                 </div>
               </div>
             </div>
