--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
     <div class="container mt-5 mb-5">
         <h1 class="text-center">Welcome to our page.</h1>
         <a class="btn btn-outline-primary btn-lg mt-5 mb-5" href="aboutus.html">About Us</a>
+        <a class="btn btn-outline-primary btn-lg mt-5 mb-5" href="notaboutus.html">Not About Us</a>
 
         <div class="accordion mt-5" id="accordionExample">
             <div class="accordion-item">
