--- a/app/notaboutus.html
+++ b/app/notaboutus.html
@@ -10,6 +10,7 @@
     <div class="container mt-5 mb-5">
         <h1 class="text-center">Not About Us</h1>
         <a class="btn btn-outline-primary btn-lg mt-5 mb-5" href="index.html">Home</a>
+        <a class="btn btn-outline-primary btn-lg mt-5 mb-5" href="aboutus.html">About Us</a>
     </div>
 
 </body>
