--- a/app/index.html
+++ b/app/index.html
@@ -66,6 +66,8 @@
                 <h3>#2</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque voluptatum quae itaque sapiente cupiditate! Quam eaque voluptatum vel, animi voluptates culpa, facilis tempore, explicabo modi velit cumque dolore voluptatibus mollitia!</p>
                 <div class="mx-auto p-2" style="width: 600px;">
+                    <img src="media/images/01.jpg" class="img-fluid" alt="boo" />
+                    <img src="media/images/001.jpg" class="img-fluid" alt="boo" />
                     <img src="media/images/02.jpg" class="img-fluid" alt="boo" />
                 </div>
                   
